# csgoshit

./: CMakeLists.txt  README.md  inject_tool.sh
SDK_from_aimtux/: definitions.h
not_yet_used_SDK_from_aimtux/: common.h
src/: hooker.cpp  hooker.h  interfaces.cpp  interfaces.h  main.cpp  main.h  offsets.h  sdk.h
src/Utils/: math.cpp  math.h  netvarmanager.h  patternfinder.cpp  vmt.h
src/funcs/: func.cpp  funcs.h
src/funcs/aim/: triggerbot.cpp  triggerbot.h
src/funcs/movement/: bhop.cpp  bhop.h
src/funcs/visuals/: chams.cpp  chams.h
src/hooks/: CreateMove.cpp  DrawModelExecute.cpp  hooks.cpp  hooks.h
src/sdk/: IAppSystem.h  IBaseClientDLL.h  IClientEntity.h  ICvar.h  IEngineTrace.h  IMaterial.h  IMaterialSystem.h  common.h  hitgroups.h  player_flags.h  shit_for_IClientEntity.h  trace_masks.h
